# AiButler

./: .gitignore  Dockerfile  README.md  asgi.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: .gitmessage.txt
.github/workflows/: ci.yml  lint.yml
app/: __init__.py
app/brain/: __init__.py  prefrontal_coretex.py
app/brain/dtos/: external_stimuli_dto.py
app/brain/functions/: exposure_opinion.py  parse_ingredients.py  process_images.py
app/brain/routers/v1/: accept_textual_stimuli.py
app/configs/: postgres.py
app/eyes/: occipital_lobe.py
app/eyes/functions/: accept_visual_stimuli.py
app/models/: __init__.py  categories.py  ingredients.py  users.py
app/stimuli/channels/: dashboard.html  index.html  register.html
app/stimuli/dtos/: user_dto.py
app/stimuli/functions/: auth.py  tokening.py
app/stimuli/routers/v1/: channeling.py  loginout_router.py  main_page.py  register_router.py
migrations/models/: 0_20250728041547_init.py  0_20250728075735_init.py
