[tool.poetry]
name = "ai-butler"
version = "0.1.0"
description = "AI Butler"
authors = ["iwill <iwill@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
requests = "^2.31.0"
opencv-python = "^4.10.0.82"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
isort = "^5.13.0"
pytest = "^8.2.0"

[tool.ruff]
line-length = 88
exclude = ["tests/*", "docs/*"]

[tool.ruff.lint] # <-- 새로운 섹션 추가 또는 기존 섹션 활용
select = ["E", "F"] # <-- 'select'를 이 섹션 아래로 이동시킵니다.

[tool.aerich]
tortoise_orm = "app.configs.postgres.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
